feat: new color pallete

--- a/src/components/PodcastApp/global.css
+++ b/src/components/PodcastApp/global.css
@@ -1,5 +1,7 @@
-@import './theme.css';
 @import 'normalize.css';
+
+@import '../../styles/colors.css';
+@import './theme.css';
 
 html, body {
   color: var(--color-text);
