--- a/src/ui/EpisodesList/EpisodesList.module.css
+++ b/src/ui/EpisodesList/EpisodesList.module.css
@@ -1,5 +1,13 @@
-.list {
+.container {
   margin: 32px 0 0;
+  height: 100%;
+  overflow: auto;
+}
+
+.list {
+  position: relative;
+  width: 100%;
+  margin: 0;
   padding: 0;
   border-top: 1px solid var(--color-background-light);
 }
@@ -8,6 +16,14 @@
   .list {
     margin: 0;
   }
+}
+
+.list li {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 84px
 }
 
 .list li:nth-child(even) {
