feat(episode): Port episode page

--- a/src/components/PodcastApp/global.css
+++ b/src/components/PodcastApp/global.css
@@ -61,6 +61,10 @@ h2 {
   font-size: var(--dimen-font-larger);
 }
 
+h3 {
+  font-size: var(--dimen-font-primary);
+}
+
 ul {
   list-style: none;
 }
