--- a/src/ui/Search/Search.module.css
+++ b/src/ui/Search/Search.module.css
@@ -1,4 +1,8 @@
-.input {
+.search {
+  height: 100%;
+}
+
+.search input {
   height: 100%;
   background-color: var(--color-background-search);
   border: 1px solid var(--color-background-search);
@@ -6,4 +10,51 @@
   color: var(--color-text-light);
   outline: none;
   padding: 16px;
+}
+
+.results {
+  margin: 0;
+  background-color: var(--color-background);
+  box-shadow: 0px 15px 20px 0px rgb(0 0 0 / 75%);
+  max-height: 500px;
+  overflow: scroll;
+  position: absolute;
+  right: 0;
+  width: 30%;
+  list-style: none;
+  padding: 0;
+}
+
+.searchItem {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+}
+
+.searchItem[data-highlighted="true"] {
+  background-color: var(--color-background-light);
+}
+
+.searchItem img {
+  height: 50px;
+  width: 50px;
+}
+
+.searchItem div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  gap: 8px;
+  font-size: var(--dimen-font-smallest);
+}
+
+.searchItem .title {
+  font-weight: bold;
+}
+
+.searchItem .author {
+  font-weight: 300;
 }
