feat(search): Use link wrapper for search result

--- a/src/ui/Search/Search.module.css
+++ b/src/ui/Search/Search.module.css
@@ -25,14 +25,14 @@
   padding: 0;
 }
 
+.results li[data-highlighted="true"] {
+  background-color: var(--color-background-light);
+}
+
 .searchItem {
   display: flex;
   flex-direction: row;
   gap: 8px;
-}
-
-.searchItem[data-highlighted="true"] {
-  background-color: var(--color-background-light);
 }
 
 .searchItem img {
@@ -44,11 +44,15 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 8px;
+  font-size: var(--dimen-font-smallest);
+  overflow: hidden;
+}
+
+.searchItem p {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  gap: 8px;
-  font-size: var(--dimen-font-smallest);
 }
 
 .searchItem .title {
