--- a/src/ui/Header/Header.module.css
+++ b/src/ui/Header/Header.module.css
@@ -9,7 +9,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.75);
 }
 
 .header > button {
@@ -28,6 +27,10 @@
   margin-left: 16px;
 }
 
+.header, .drawer {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.75);
+}
+
 .drawer {
   position: fixed;
   top: 0;
@@ -40,7 +43,7 @@
   background-color: var(--color-background);
 }
 
-.drawer[data-open="open"] {
+.drawer[data-open='open'] {
   width: var(--dimen-drawer-width);
   min-width: var(--dimen-drawer-width);
   transform: translateX(0px);
