--- a/src/shared/player/Player.module.css
+++ b/src/shared/player/Player.module.css
@@ -1,6 +1,7 @@
 .container {
   --dimen-player-height: 96px;
   --dimen-player-padding: 8px;
+  --dimen-player-cover: calc(var(--dimen-player-height) - var(--dimen-player-padding));
   height: var(--dimen-player-height);
   position: fixed;
   left: 0;
@@ -29,9 +30,10 @@
 }
 
 .player img {
-  height: calc(var(--dimen-player-height) - var(--dimen-player-padding));
-  width: calc(var(--dimen-player-height) - var(--dimen-player-padding));
+  height: var(--dimen-player-cover);
+  width: var(--dimen-player-cover);
   object-fit: cover;
+  transform: translateY(calc(var(--dimen-player-padding) / -2));
 }
 
 .player .controls {
@@ -115,11 +117,14 @@
 }
 
 .seekbarContainer {
+  --dimen-seekbar-offset: var(--dimen-player-cover);
+  --dimen-seekbar-width: calc(100% - var(--dimen-player-cover));
+
   position: absolute;
   top: 0;
-  left: 0;
+  left: var(--dimen-seekbar-offset);
   height: 4px;
-  width: 100%;
+  width: var(--dimen-seekbar-width);
   transition: height 0.3s ease;
 }
 
@@ -149,5 +154,10 @@
 
   .player .controls button:not([data-primary-control]) {
     display: none;
+  }
+
+  .seekbarContainer {
+    --dimen-seekbar-offset: 0;
+    --dimen-seekbar-width: 100%;
   }
 }
