--- a/src/shared/player/Player.module.css
+++ b/src/shared/player/Player.module.css
@@ -76,10 +76,14 @@
   flex: 1;
 }
 
+.secondaryControls {
+  display: flex;
+  gap: 8px;
+  padding-right: 8px;
+}
+
 .volumeControl {
   display: flex;
-  justify-content: flex-end;
-  padding-right: 8px;
   gap: 8px;
 }
 
@@ -148,7 +152,7 @@
 
 @media only screen and (max-width: 600px) {
   .spacer,
-  .volumeControl {
+  .secondaryControls {
     display: none;
   }
 
