--- a/src/components/PodcastApp/theme.css
+++ b/src/components/PodcastApp/theme.css
@@ -11,7 +11,12 @@
   --color-sub-title: #cccccc;
   --color-text-light: #ffffff;
 
-  --font-primary: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --color-animation-frame-1: #5cffa0;
+  --color-animation-frame-2: #00b778;
+  --color-animation-frame-3: #82ffb5;
+
+  --font-primary: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
 
   --dimen-header-z-index: 501;
   --dimen-header-height: 64px;
@@ -46,8 +51,11 @@
   --color-text: #000000;
   --color-sub-title: #555555;
   --color-text-light: #ffffff;
-}
 
+  --color-animation-frame-1: #c069ff;
+  --color-animation-frame-2: #60347f;
+  --color-animation-frame-3: #8649b2;
+}
 
 @media only screen and (max-width: 600px) {
   :root {
