--- a/src/ui/LoadBar/LoadBar.module.css
+++ b/src/ui/LoadBar/LoadBar.module.css
@@ -1,24 +1,12 @@
-@keyframes loading-dark {
+@keyframes loading {
   0% {
-    background-color: #5cffa0;
+    background-color: var(--color-animation-frame-1);
   }
   50% {
-    background-color: #00B778;
+    background-color: var(--color-animation-frame-2);
   }
   100% {
-    background-color: #82ffb5;
-  }
-}
-
-@keyframes loading-light {
-  0% {
-    background-color: #c069ff;
-  }
-  50% {
-    background-color: #60347f;
-  }
-  100% {
-    background-color: #8649b2;
+    background-color: var(--color-animation-frame-3);
   }
 }
 
@@ -29,9 +17,5 @@
   height: var(--dimen-load-bar-height);
   width: 100%;
   z-index: var(--dimen-header-z-index);
-  animation: loading-dark 2s infinite;
-}
-
-:global(:root.light) .loadBar {
-  animation: loading-light 2s infinite;
+  animation: loading 2s infinite;
 }
