feat(player): Add playback rate switcher

--- a/src/shared/player/Player.module.css
+++ b/src/shared/player/Player.module.css
@@ -130,6 +130,14 @@
   transition: width 1s;
 }
 
+.playbackRate {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: var(--dimen-font-regular);
+  width: 48px;
+}
+
 .seekbar[data-is-buffering='true'] {
   animation: loading 2s infinite;
   width: 100%;
