feat(ui): Improve rate button
- Use bolder weight and accent color

--- a/src/shared/player/Player.module.css
+++ b/src/shared/player/Player.module.css
@@ -134,7 +134,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-weight: bold;
   font-size: var(--dimen-font-regular);
+  color: var(--color-accent);
   width: 48px;
 }
 
