--- a/src/ui/Search/Search.module.css
+++ b/src/ui/Search/Search.module.css
@@ -20,7 +20,8 @@
   overflow: scroll;
   position: absolute;
   right: 0;
-  width: 30%;
+  width: 100%;
+  max-width: 400px;
   list-style: none;
   padding: 0;
 }
