--- a/src/pages/settings/Settings.module.css
+++ b/src/pages/settings/Settings.module.css
@@ -25,7 +25,7 @@ form.container > div {
 }
 
 form.container > div,
-form.container> div > * {
+form.container > div > * {
   cursor: pointer;
 }
 
@@ -43,6 +43,16 @@ form.container svg {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.shortcut kbd {
+  font-weight: bold;
+  background-color: var(--color-background-light);
+  border-radius: 6px;
+  border-top: 1px solid var(--color-background-dark);
+  border-width: 1px 1px 3px;
+  padding: 2px 8px;
+  white-space: nowrap;
 }
 
 @media only screen and (max-width: 600px) {
