feat(chromecast): Disable volume control if remote doesn't support it

--- a/src/shared/player/Player.module.css
+++ b/src/shared/player/Player.module.css
@@ -18,6 +18,10 @@
   transform: translateY(0);
 }
 
+.container button[disabled] {
+  filter: opacity(0.6);
+}
+
 .player {
   background-color: var(--color-background);
   height: 100%;
