feat(app): Use accent-color for slider track color
- On supported browsers radio and input range slider track now use
  the color-accent variable
  https://web.dev/accent-color/

--- a/src/components/PodcastApp/global.css
+++ b/src/components/PodcastApp/global.css
@@ -15,6 +15,10 @@ html, body {
   box-sizing: border-box;
 }
 
+html, body {
+  accent-color: var(--color-accent);
+}
+
 #__next,
 main {
   height: 100%;
