--- a/src/components/PodcastApp/theme.css
+++ b/src/components/PodcastApp/theme.css
@@ -7,6 +7,8 @@
 
   --color-background-search: #131313;
 
+  --color-accent-gray: #777777;
+
   --color-text: #ffffff;
   --color-sub-title: #cccccc;
   --color-text-light: #ffffff;
@@ -37,6 +39,8 @@
   --dimen-podcast-info-padding: 32px 32px 0;
   --dimen-podcast-info-cover: 300px;
   --dimen-podcast-info-direction: row;
+
+  --border-radius-control: 4px;
 }
 
 :root.light {
@@ -47,6 +51,8 @@
   --color-background-light: #e3e3e3;
 
   --color-background-search: #cccccc;
+
+  --color-accent-gray: #ddd;
 
   --color-text: #000000;
   --color-sub-title: #555555;
