--- a/src/ui/EpisodesList/EpisodesList.module.css
+++ b/src/ui/EpisodesList/EpisodesList.module.css
@@ -28,3 +28,62 @@
 .list li:nth-child(even) {
   background-color: var(--color-background-light);
 }
+
+.episodeListOptions {
+  margin: 15px 32px;
+  padding: 15px 0;
+}
+
+
+.episodeListSearch {
+  position: relative;
+  border-bottom: 1px solid var(--color-accent-gray);
+  margin: 15px 0;
+}
+
+.episodeListSearch svg {
+  fill: var(--color-accent-gray);
+  width: 25px;
+  position: absolute;
+  top: 50%;
+  left: 4px;
+  transform: translateY(-50%);
+}
+
+.episodeListSearch input {
+  background: transparent;
+  padding: 8px 0 10px 35px;
+  width: 100%;
+}
+
+.episodeListOptionsSort > span {
+  margin-right: 15px;
+}
+
+.episodeListOptionsSort select {
+  color: var(--color-text);
+  background: var(--color-background-light);
+  border: none;
+  border-radius: var(--border-radius-control);
+  padding: 10px;
+}
+
+@media only screen and (min-width: 700px) {
+  .episodeListOptions {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    row-gap: 10px;
+    column-gap: 40px;
+  }
+
+  .episodeListCount {
+    flex: 1 1 25%; 
+  }
+
+  .episodeListSearch {
+    margin-left: auto;
+    flex: 1 1 350px;
+    max-width: 350px;
+  }
+}
