--- a/src/ui/Button/Button.module.css
+++ b/src/ui/Button/Button.module.css
@@ -22,3 +22,24 @@ button.button[data-is-current='true']:hover {
   background-color: transparent;
   color: var(--color-text);
 }
+
+.withIcon {
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 45px;
+  height: 45px;
+  border: 2px solid var(--color-accent);
+}
+
+.withIcon svg {
+  width: 40px;
+  fill: var(--color-accent);
+  transition: transform 0.35s ease-in-out;
+}
+
+.withIcon:hover svg {
+  fill: var(--color-background);
+  transform: scale(1.3);
+}
