feat(episodes): Fix play button icon appearaence
- For focus state
- Show correct episodes count in episodes list

--- a/src/ui/Button/Button.module.css
+++ b/src/ui/Button/Button.module.css
@@ -38,6 +38,7 @@ button.button[data-is-current='true']:hover {
   transition: transform 0.25s ease-out;
 }
 
+.withIcon:focus svg,
 .withIcon:hover svg {
   fill: var(--color-background);
   transform: scale(1.4);
