--- a/src/ui/EpisodesList/EpisodeItem.module.css
+++ b/src/ui/EpisodesList/EpisodeItem.module.css
@@ -4,7 +4,7 @@
   column-gap: 15px;
   padding: 0 16px 0 0;
   font-size: var(--dimen-font-regular);
-  height: 100%;
+  height: var(--dimen-episode-list-item-size);
 }
 
 @media only screen and (min-width: 600px) {
