--- a/src/ui/EpisodesList/EpisodesList.module.css
+++ b/src/ui/EpisodesList/EpisodesList.module.css
@@ -24,7 +24,7 @@
   width: 100%;
 }
 
-.list li:nth-child(even) {
+.even {
   background-color: var(--color-background-light);
 }
 
@@ -79,7 +79,7 @@
   }
 
   .episodeListCount {
-    flex: 1 1 35%; 
+    flex: 1 1 35%;
   }
 
   .episodeListSearch {
