feat(player): add 'add to queue' icon, minor ui improvements

--- a/src/components/PodcastApp/theme.css
+++ b/src/components/PodcastApp/theme.css
@@ -5,7 +5,7 @@
   --color-background-dark: #131313;
   --color-background-light: #333333;
 
-  --color-background-search: #131313;
+  --color-background-search: #555;
 
   --color-accent-gray: #999999;
   --color-accent-gray-hover: #dddddd;
@@ -50,6 +50,7 @@
 @media only screen and (max-width: 600px) {
   :root {
     --dimen-episode-list-item-size: 100px;
+    --dimen-player-height: 75px;
   }
 }
 
@@ -62,7 +63,6 @@
 
   --color-background-search: #cccccc;
 
-  --color-accent-gray: #ddd;
 
   --color-accent-gray: #777777;
   --color-accent-gray-hover: #131313;
