fix(build): Use title as child for svg element
- Wrap queue icon with link to Queue page
- Use separate icon for queue list, because it has different effect
  navigate to queue page instead of adding episode to current queue.
- Add queue page

--- a/src/components/PodcastApp/theme.css
+++ b/src/components/PodcastApp/theme.css
@@ -37,6 +37,8 @@
   --dimen-icon-primary: 24px;
   --dimen-load-bar-height: 4px;
 
+  --dimen-page-padding: 32px;
+
   --dimen-player-height: 96px;
 
   --dimen-podcast-info-padding: 32px 32px 0;
