--- a/src/ui/Button/Button.module.css
+++ b/src/ui/Button/Button.module.css
@@ -14,6 +14,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0;
   width: 45px;
   height: 45px;
   border: 2px solid var(--color-accent);
