fix(ui): External link svg colors

--- a/src/components/PodcastApp/theme.css
+++ b/src/components/PodcastApp/theme.css
@@ -1,7 +1,7 @@
 :root {
   --color-background: #292929;
   --color-accent: #82ffb5;
-  --color-accent-hover: #00b778;;
+  --color-accent-hover: #00b778;
 
   --color-background-dark: #131313;
   --color-background-light: #333333;
