--- a/src/shared/player/Player.module.css
+++ b/src/shared/player/Player.module.css
@@ -28,7 +28,7 @@
   grid: 28px auto / var(--dimen-player-cover) 1fr;
   position: relative;
   border-top: 1px solid var(--color-background-search);
-  box-shadow: 0 -2px 5px rgba(0,0,0,0.15);
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.15);
 }
 
 .imageCoverLink {
