fix(ui): Make podcast tiles style static

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -78,3 +78,20 @@ h3 {
 ul {
   list-style: none;
 }
+
+[data-tile] {
+  background: linear-gradient(to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0) 12%,
+      rgba(0, 0, 0, 0) 23%,
+      rgba(0, 0, 0, 0) 34%,
+      rgba(0, 0, 0, 0) 50%,
+      rgba(0, 0, 0, 0.2) 60%,
+      rgba(0, 0, 0, 0.4) 76%,
+      rgba(17, 17, 17, 0.5) 88%,
+      rgba(28, 28, 28, 0.5) 94%,
+      rgba(43, 43, 43, 0.6) 95%,
+      rgba(19, 19, 19, 0.8) 100%),
+    no-repeat var(--asset-tile);
+  background-size: cover;
+}
